--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+* {
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 15px;
+}
+
 p {
     line-height: 2em;
 }
@@ -32,4 +41,13 @@ h3 {
     color: #333333;
     text-align: center;
     height: 10vh;
+}
+
+.api-version-title {
+    color: #6C757D;
+    font-size: 80%;
+}
+
+.server-url {
+    font-weight: bold;
 }
