--- a/_layouts/reference.html
+++ b/_layouts/reference.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Reference docs - {{ site.data.petstore.info.title }}</title>
+  <title>Reference docs - {{ site.data.meme_generator.info.title }}</title>
   <link rel="icon" type="image/x-icon" href="https://www.pngmart.com/files/11/Doge-Meme-PNG-File.png">
 
   <link rel="stylesheet" href="../assets/css/styles.css">
