--- a/_includes/content.html
+++ b/_includes/content.html
@@ -23,55 +23,60 @@
                 </ul>
                 <p class="fw-lighter">{{ site.data.meme_generator.servers.url }}</p>
                 <p>{{ site.data.meme_generator.info.description | markdownify }}</p>
-                <hr />
             </div>
             <div id="sidebar" class="col">
                 <p>...</p>
             </div>
         </div>
-        <div class="row">
-            <div id="middle" class="col-sm-7">
-                {% for endpoint in site.data.meme_generator.paths %}
+        {% include section_divider.html %}
+        {% for endpoint in site.data.meme_generator.paths %}
+            <div class="row">
+                <div id="middle" class="col-sm-7">
                     <h2>{{ endpoint[0] }}</h2>
-                    {% for method in endpoint[1] %}
+                </div>
+                <div id="sidebar" class="col">
+                </div>
+            </div>
+            {% for method in endpoint[1] %}
+                <div class="row">
+                    <div id="middle" class="col-sm-7">
                         <p><b>{{ method[0] | upcase }}</b> {{ endpoint[0] }}</p>
                         <p>{{ method[1].description | markdownify  }}</p>
                         {% if method[1].requestBody %}
-                            <p><b>Request body</b></p>
+                            <h3>Request body</h3>
                             {% for content in method[1].requestBody.content %}
                                 <p><b>Content-Type:</b> <code>{{ content[0] }}</code></p>
-                                <p><b>Parameters:</b></p>
-                                    <table class="table table-striped table-bordered table-hover">
-                                    <thead>
-                                        <tr>
-                                            <th>Name</th>
-                                            <th>Description</th>
-                                            <th>Required?</th>
-                                            <th>Type</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        {% for param in content[1].schema %}
-                                        <tr>
-                                            <td><code>{{ param[0] }}</code></td>
-                                            <td>{{ param[1].description | markdownify }}</td>
-                                            <td>{{ param[1].required }}</td>
-                                            <td>{{ param[1].type }}</td>
-                                        </tr>
-                                        {% endfor %}
-                                    </tbody>
+                                <table class="table table-striped table-bordered table-hover">
+                                <thead>
+                                    <tr>
+                                        <th>Name</th>
+                                        <th>Description</th>
+                                        <th>Required?</th>
+                                        <th>Type</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                {% for param in content[1].schema %}
+                                    <tr>
+                                        <td><code>{{ param[0] }}</code></td>
+                                        <td>{{ param[1].description | markdownify }}</td>
+                                        <td>{{ param[1].required }}</td>
+                                        <td>{{ param[1].type }}</td>
+                                    </tr>
+                                {% endfor %}
+                                </tbody>
                                 </table>
                             {% endfor %}
                         {% else %}
                             <p>This method doesn't have any parameters or a request body.</p>
                         {% endif %}
-                    {% endfor %}
-                    <hr />
-                {% endfor %}
-            </div>
-            <div id="sidebar" class="col">
-                <p>...</p>
-            </div>
-        </div>
+                        </div>
+                    <div id="sidebar" class="col">
+                        <p>...</p>
+                    </div>
+                </div>
+                {% include section_divider.html %}
+            {% endfor %}
+        {% endfor %}
     </div>
 </div>
