Created a "Contact info" area and all its related files and styles.

--- a/_includes/content.html
+++ b/_includes/content.html
@@ -25,7 +25,7 @@
                 </ul>
             </div>
             <div id="sidebar" class="col">
-                <p>...</p>
+                {% include contact_info.html %}
             </div>
         </div>
         {% include section_divider.html %}
