--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
 
-* {
+body {
     font-family: "Roboto", sans-serif;
     font-weight: 400;
     font-style: normal;
@@ -42,6 +42,11 @@ li {
     padding: 25px;
     background-color: #343A40;
     color: #f0ffff;
+}
+
+#sidebar h3 {
+    color: #c2c2c2;
+    font-weight: 400;
 }
 
 #footer {
@@ -123,4 +128,16 @@ p.request-body:after {
     flex: 1 1;
     border-bottom: 1px solid #e7e7e7;
     margin: auto;
+}
+
+#response-content,
+pre {
+    font-family: "Source Code Pro", monospace;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    border-radius: 10px;
+    padding: 1px 10px;
+    background-color: #212529;
+    font-size: 10pt;
 }
