Created sticky-top navbar; Created collapsible sidebar menu (TOC).

--- a/_includes/content.html
+++ b/_includes/content.html
@@ -1,16 +1,18 @@
-<div class="row">
-    <div id="toc" class="col-sm-2 vh-100">
-        <ul>
-            <li>Item</li>
-            <li>Item</li>
-            <li>Item</li>
-            <li>Item</li>
-            <li>Item</li>
-            <li>Item</li>
-            <li>Item</li>
-        </ul>
+<div class="row flex-nowrap">
+    <div class="col-auto px-0 border-end" style="background-color: #fafafa;">
+        <div id="toc" class="collapse collapse-horizontal show">
+            <ul>
+                <li>Item</li>
+                <li>Item</li>
+                <li>Item</li>
+                <li>Item</li>
+                <li>Item</li>
+                <li>Item</li>
+                <li>Item</li>
+            </ul>
+        </div>
     </div>
-    <div id="content" class="col vh-100">
+    <div id="content" class="col">
         <div class="row">
             <div id="middle" class="col-sm-7">
                 <h1>{{ site.data.meme_generator.info.title }} <span class="api-version-title">v{{ site.data.meme_generator.info.version }}</span></h1>
