--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -1,5 +1,6 @@
-<nav id="topnav" class="navbar sticky-top bg-body-tertiary">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">Sticky top</a>
-    </div>
+<nav class="navbar bg-body-tertiary sticky-top">
+    <span class="navbar-text"><a href="#" data-bs-target="#toc" data-bs-toggle="collapse"
+            class="border rounded-3 text-decoration-none" style="padding: 3px 5px 1px; color: #333333; font-size: 12pt;"><i
+                class="lni lni-menu"></i></a>
+        {{ site.data.meme_generator.info.title }}</span>
 </nav>
