--- a/_layouts/reference.html
+++ b/_layouts/reference.html
@@ -7,18 +7,23 @@
   <title>Reference docs - {{ site.data.meme_generator.info.title }}</title>
 
   <link rel="icon" type="image/x-icon" href="https://www.pngmart.com/files/11/Doge-Meme-PNG-File.png">
+
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="../assets/css/styles.css">
+  <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
+  <link href="../assets/css/styles.css" rel="stylesheet" />
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 </head>
 
 <body>
   {% include topnav.html %}
-  <div id="main" class="container-fluid">
+  <div class="container-fluid">
     {% include content.html %}
+    <!-- {% include footer.html %} -->
   </div>
-  <!-- {% include footer.html %} -->
 </body>
 
 </html>
