--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -69,6 +69,10 @@ li {
     padding: 4px;
     border: solid 1px #dedede;
     border-radius: 5px;
+    font-family: "Source Code Pro", monospace;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
 }
 
 #sidebar {
