--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -167,17 +167,22 @@ p.request-body:after {
     margin: auto;
 }
 
+.nav-link,
+.nav-link:hover {
+    color: #fff;
+}
+
 .response-control {
     margin-top: 15px;
 }
 
-#response-content,
+.response-content,
 pre {
     font-family: "Source Code Pro", monospace;
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
-    border-radius: 10px;
+    border-radius: 0px 0px 10px 10px;
     padding: 1px 10px;
     background-color: #212529;
     font-size: 10pt;
