Improvements on the project's file structure

--- a/_includes/contact_info.html
+++ b/_includes/contact_info.html
@@ -1,7 +1,4 @@
-<!-- Data file name goes here -->
-{% assign data_source = "meme_generator" %}
-
-<p><b>{{ site.data.[data_source].info.contact.name }}</b></p>
+<h1>{{ site.data.[data_source].info.contact.name }}</h1>
 <table id="contact-info">
     <tr>
         <th>E-mail:</th>
