--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -215,3 +215,54 @@ pre {
     background-color: #212529;
     font-size: 10pt;
 }
+
+/*                      */
+/* DARK MODE VARIATIONS */
+/*                      */
+
+h2 .dark-mode,
+h3 .dark-mode,
+h4 .dark-mode,
+h5 .dark-mode,
+h6 .dark-mode {
+    color: #fff;
+}
+
+.navbar-text .dark-mode,
+nav span.dark-mode {
+    color: #fff;
+}
+
+.navbar-text .dark-mode {
+    background-color: #333333;
+}
+
+#toc-container.dark-mode {
+    color: #fff;
+    background-color: #343A40;
+
+    a {
+        color: #fff;
+    }
+
+    a:hover {
+        background-color: #212529;
+    }
+
+    a.active {
+        background-color: #333333;
+        color: #000;
+    }
+}
+
+#middle.dark-mode {
+    background-color: #333333;
+    color: #fff;
+}
+
+
+
+code.dark-mode {
+    color: lightpink;
+    background-color: #2C3034;
+}
